# benchmark-multiprocessing

./: README.md  example.py  pyproject.toml
benchmark_multiprocessing/: bench.py
