[tool.poetry]
name = "benchmark-multiprocessing"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "benchmark_multiprocessing"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
p-tqdm = "^1.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {extras = ["jupyter"], version = "^22.10.0"}
ipykernel = "^6.16.1"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
